--- a/pom.xml
+++ b/pom.xml
@@ -984,9 +984,9 @@
                                 <diffChangeLogFile>${project.basedir}/src/main/resources/config/liquibase/changelog/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
                                 <driver>org.mariadb.jdbc.Driver</driver>
                                 <url>jdbc:mariadb://localhost:3306/freeBoard</url>
-                                <defaultSchemaName></defaultSchemaName>
-                                <username></username>
-                                <password></password>
+                                <defaultSchemaName>freeboard</defaultSchemaName>
+                                <username>root</username>
+                                <password>th0523</password>
                                 <referenceUrl>hibernate:spring:com.mycompany.myapp.domain?dialect=org.hibernate.dialect.MariaDB103Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                                 <verbose>true</verbose>
                                 <logging>debug</logging>
